Fixed song-list height to adjust automatically
Using flex-grow height of song-list section in library will be
automatically adjusted. To accomodated header, song-list and footer into
it its overflow was hidden as its height is also set by flex-grow which
might lead to its height growing and spilling over the height of
left-sidebar.

--- a/style/style.css
+++ b/style/style.css
@@ -38,11 +38,14 @@ body {
 .left-sidebar .library {
   position: relative;
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
 }
 
 .left-sidebar .library .header {
   gap: 8px;
-  margin-bottom: 10px;
+  margin-bottom: 6px;
 }
 
 .left-sidebar .library h2 {
@@ -51,7 +54,7 @@ body {
 
 .left-sidebar .library .song-list {
   margin: 10px 0;
-  height: 54vh;
+  flex-grow: 1;
   overflow-y: auto;
 }
 
@@ -73,11 +76,6 @@ body {
 
 .left-sidebar .library .song-list .play-now {
   justify-self: end;
-}
-
-.left-sidebar .footer {
-  position: absolute;
-  bottom: 10px;
 }
 
 .left-sidebar .footer a {
